# wakfu-guild-farm

./: .gitignore  pyproject.toml
.github/workflows/: python-package.yml
src/wakfu_guild_farm/: __main__.py  actions.py  constants.py  constants_apple.py
