[project]
name = "wakfu-guild-farm"
version = "0.1.0"
description = "Wakfu Bot for farming guild points."
authors = [
    {name = "Jérémy Laurent",email = "poulpy2k@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "keyboard (>=0.13.5,<0.14.0)",
    "pyautogui (>=0.9.54,<0.10.0)"
]

[tool.poetry]
packages = [{include = "wakfu_guild_farm", from = "src"}]

[tool.poetry.scripts]
launch = "wakfu_guild_farm.__main__:run"

[tool.coverage.run]
branch = true
omit = ["src/wakfu_guild_farm/__main__.py", "src/news/app.py"]
source = ["news"]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

[tool.coverage.report]
fail_under = 95

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"